# Player

./: .gitignore  README.md
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioEngine.cpp  AudioEngine.h  CMakeLists.txt  Decoder.cpp  Decoder.h  audio_bridge.cpp
app/src/main/java/com/seunome/player/: AppDatabase.kt  AudioEngine.kt  MainActivity.kt  MainSongAdapter.kt  MediaService.kt  QueueAdapter.kt  Song.kt  SongDao.kt  SongEntity.kt
app/src/main/res/drawable/: ic_music_note.xml  ic_play.xml
app/src/main/res/layout/: activity_main.xml  item_main_song.xml  item_queue.xml
